# iot-realtime-platform

./: .env.example  ARCHITECTURE.md  README.md
ci/github-actions/: go-processor.yml  java-api.yml  rust-ingest.yml
infra/docker/: docker-compose.dev.yml  prometheus.yml
infra/docker/grafana/dashboards/: iot-platform-overview.json
infra/docker/grafana/provisioning/dashboards/: dashboards.yml
infra/docker/grafana/provisioning/datasources/: datasources.yml
infra/docker/init-scripts/: 01-init-timescale.sql  01-init-timescaledb.sql
scripts/: dev-down.sh  dev-up.sh  generate-certs.sh
services/go-processor/: Dockerfile  README.md  go.mod  go.sum
services/go-processor/cmd/processor/: main.go
services/go-processor/internal/config/: config.go
services/go-processor/internal/database/: timescale.go
services/go-processor/internal/kafka/: connection.go  consumer.go  producer.go
services/go-processor/internal/metrics/: prometheus.go
services/go-processor/internal/processors/: aggregator.go  aggregator_test.go  anomally.go  anomally_test.go
services/go-processor/internal/proto/: telemetry.pb.go  telemetry.proto
services/go-processor/internal/websocket/: client.go  hub.go  server.go
services/java-api/: .factorypath  .project  Dockerfile  README.md  mvnw  pom.xml
services/rust-ingest/: Cargo.toml  Dockerfile  README.md  build.rs
services/rust-ingest/src/: config.rs  kafka.rs  main.rs  server.rs  telemetry_handler.rs
services/rust-ingest/src/proto/: mod.rs  telemetry.proto
tools/loadgen/: Dockerfile  generator.go  go.mod  main.go
(+19 files in other folders)
