[package]
name = "rust-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.11"
prost-types = "0.11"
tonic = "0.9"                                                       # Optional if we add gRPC ingestion later
rdkafka = { version = "0.34", features = ["tokio"] }
config = "0.13"
anyhow = "1.0"
bytes = "1.4"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1.0", features = ["server"] }
prometheus = "0.13"

[build-dependencies]
prost-build = "0.11"
